--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <!-- Photo by Brooke Lark on Unsplash -->
-        <img id="image" src="/img/snacktray.jpg">
+        <img id="image" src="../img/snacktray.jpg">
 
         <div id = "controllers">
             <label for="blur">Blur</label>
